tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail.stderr
error[E0277]: the trait bound `Maybe: TyCompat<<(Foo::{synthetic#0},) as std::marker::effects::Intersection>::Output>` is not satisfied
   |
note: required by a bound in `Bar::{synthetic#0}`
  --> $DIR/super-traits-fail.rs:11:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Bar::{synthetic#0}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
